# boa

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  README.md  callgrind.out.3202
include/boa/: camera.h  deletion_queue.h  initializers.h  iteration.h  macros.h  mesh.h  renderer.h  texture.h  types.h  util.h  window.h
include/boa/asset/: mesh.h  texture.h
include/boa/ctl/: action.h  keyboard.h  mouse.h
include/boa/ecs/: component.h  component_def.h  ecs.h  entity.h
include/boa/gfx/: animation.h  camera.h  debug_drawer.h  engine_interface.h  lighting.h  lighting_type.h  linear.h  linear_types.h  renderer.h  scene.h  window.h
include/boa/gfx/asset/: animation.h  animation_controller.h  asset.h  asset_manager.h  gltf.h  gltf_model.h  lighting_type.h  linear_types.h  mesh.h  model.h  model_manager.h  texture.h  vkasset.h
include/boa/gfx/asset/gltf/: scene.h
include/boa/gfx/vk/: initializers.h  types.h  util.h
include/boa/gme/: engine.h  object.h
include/boa/input/: keyboard.h  mouse.h
include/boa/ngn/: engine.h  engine_state.h  file_dialog.h  object.h  scripting.h  scripting_interface.h
include/boa/phy/: bullet_glm.h  debug_drawer.h  physics.h  physics_controller.h
include/boa/utl/: deletion_queue.h  iteration.h  macros.h
lib/bullet3/lib/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  BussIK_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  LinearMath_Debug.lib  OpenGLWindow_Debug.lib  clsocket_Debug.lib
models/: bmw.mtl  domino_crown.gltf
models/primitives/: plane.gltf  plane2.gltf  plane_untextured.gltf
save/: default.json  default2.json  sponza.json  test.json
script/: boa.lua  test.lua
shaders/: CMakeLists.txt  compile.sh  skybox.vert  textured.frag  textured.vert  triangle.frag  triangle.vert  untextured.frag  untextured.vert
shaders/blinn_phong/: blinn_phong.frag  blinn_phong.vert  textured_blinn_phong.frag  textured_blinn_phong.vert  untextured_blinn_phong.frag  untextured_blinn_phong.vert
shaders/bounding_box/: bounding_box.vert
shaders/skybox/: skybox.frag  skybox.vert
shaders/textured/: textured.frag  textured.vert
shaders/textured_blinn_phong/: textured_blinn_phong.frag  textured_blinn_phong.vert
shaders/untextured/: untextured.frag  untextured.vert
shaders/untextured_blinn_phong/: untextured_blinn_phong.frag  untextured_blinn_phong.vert
src/: main.cpp
src/boa/: camera.cpp  deletion_queue.cpp  initializers.cpp  mesh.cpp  renderer.cpp  texture.cpp  util.cpp  window.cpp
src/boa/asset/: mesh.cpp  texture.cpp
src/boa/ctl/: keyboard.cpp  mouse.cpp
src/boa/ecs/: component.cpp  component_def.cpp  entity.cpp
src/boa/gfx/: camera.cpp  debug_drawer.cpp  engine_interface.cpp  linear.cpp  renderer.cpp  scene.cpp  window.cpp
src/boa/gfx/asset/: animation.cpp  animation_controller.cpp  asset.cpp  asset_manager.cpp  gltf_model.cpp  linear_types.cpp  mesh.cpp  model.cpp  model_manager.cpp  texture.cpp  vkasset.cpp
src/boa/gfx/vk/: initializers.cpp  util.cpp
src/boa/gme/: engine.cpp
src/boa/input/: keyboard.cpp  mouse.cpp
src/boa/ngn/: engine.cpp  engine_state.cpp  engine_ui.cpp  file_dialog.cpp  scripting.cpp  scripting_interface.cpp
src/boa/phy/: bullet_glm.cpp  debug_drawer.cpp  physics.cpp  physics_controller.cpp
src/boa/utl/: deletion_queue.cpp
